analized FindBugs & fixed several SEVERE issues